fix(button,info-button): Fix Neutral Button Dark Mode Outline, Add Info Button Examples #694

--- a/src/tedi/components/buttons/button-content/button-content.module.scss
+++ b/src/tedi/components/buttons/button-content/button-content.module.scss
@@ -374,6 +374,10 @@ $btn-width-large: 3.72rem;
       var(--button-main-neutral-inverted-background-default),
       var(--button-main-neutral-inverted-background-default)
     );
+
+    &:focus-visible:not(:disabled, [aria-disabled='true']) {
+      outline-color: var(--tedi-neutral-100);
+    }
   }
 
   &.tedi-btn--link {
